feat(daemon): add git init, reset, restore, remote, config & authenticate operations (#512)
